[gd_scene load_steps=2 format=3 uid="uid://dgai141dypbs8"]

[ext_resource type="Script" uid="uid://k3cjn0twc2m5" path="res://scenes/nextlevel.gd" id="1_w43ms"]

[node name="NextLevelScreen" type="CanvasLayer"]
script = ExtResource("1_w43ms")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0, 0, 0.588235)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 200)
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 144.0
offset_top = 48.0
offset_right = 274.0
offset_bottom = 71.0
text = "\"Level 1 Selesai!\""

[node name="NextLevelButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 131.0
offset_top = 101.0
offset_right = 283.0
offset_bottom = 132.0
text = "\"Level Berikutnya\""

[connection signal="pressed" from="Panel/NextLevelButton" to="." method="_on_next_level_button_pressed"]
